--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     * {
       font-family: 'Droid Sans', sans-serif;
     }
+    h1 {
+      margin-top: 5px;
+    }
     h3 {
       margin: 20px 0 10px 0;
     }
@@ -56,6 +59,7 @@
     </style>
   </head>
   <body ng-app="myApp" ng-controller='demoController'>
+    <a href="https://github.com/revolunet/angular-carousel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
     <h1>AngularJS Touch Carousel</h1>
     <div class='intro'>Transform any ng-repeat in a mobile friendly carousel, just by adding a 'carousel' attribute to your 'ul' element. AngularJS magic :)<br><br>
     Try to swipe these demos with your mouse or smartphone :
