--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular.js"></script>
 
     <!-- include carousel src -->
-    <script src="./src/angular-carousel.js"></script>
-    <link href='./src/angular-carousel.css' rel='stylesheet' type='text/css'>
+    <script src="./dist/angular-carousel.min.js"></script>
+    <link href='./dist/angular-carousel.min.css' rel='stylesheet' type='text/css'>
 
     <script>
     /* demo page code */
