use non min version for demo

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <br><br><br>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular.min.js"></script>
 
     <!-- include carousel src -->
-    <script src="./dist/angular-carousel.min.js"></script>
+    <script src="./dist/angular-carousel.js"></script>
     <link href='./dist/angular-carousel.min.css' rel='stylesheet' type='text/css'>
 
     <script>
