--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.1.1/angular.min.js"></script>
 
     <!-- include carousel src -->
-    <script src="./dist/angular-carousel.js"></script>
+    <script src="./dist/angular-carousel.min.js"></script>
     <link href='./dist/angular-carousel.min.css' rel='stylesheet' type='text/css'>
 
     <script>
